--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -2,6 +2,10 @@
   background-color: $primary-white-color;
   padding-bottom: 94px;
 
+  &__container {
+    @extend %container;
+  }
+
   &__title {
     @extend %title;
   }
