--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -2,6 +2,10 @@
   padding-top: 94px;
   padding-bottom: 94px;
 
+  &__container {
+    @extend %container;
+  }
+
   &__title {
     @extend %title;
   }
