--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -13,7 +13,8 @@
   background-size: cover;
   text-align: center;
 
-  .container {
+  &__container {
+    @extend %container;
     position: relative;
   }
 
