--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -1,9 +1,21 @@
 .social {
-  margin-top: 11px;
-  margin-left: 98px;
-  margin-right: 93px;
+  @media screen and (max-width: 767px) {
+    margin: 30px 0;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-left: 165px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin: 11px 93px 0 98px;
+  }
 
   &__title {
+    @media screen and (max-width: 1199px) {
+      text-align: center;
+    }
+
     color: $primary-white-color;
     font-size: 14px;
     line-height: 1.1;
@@ -15,6 +27,10 @@
   &__list {
     @extend %list;
     display: flex;
+
+    @media screen and (max-width: 1199px) {
+      justify-content: center;
+    }
   }
 
   &__item:not(:last-child) {
