--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -1,15 +1,35 @@
 .subscribe {
   display: flex;
   flex-direction: column;
-  margin-top: 11px;
+
+  @media screen and (max-width: 767px) {
+    margin-top: 30px;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-top: 60px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-top: 11px;
+  }
 
   &__list {
     @extend %list;
     display: flex;
+
+    @media screen and (max-width: 1199px) {
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   &__item:not(:last-child) {
     margin-right: 12px;
+
+    @media screen and (max-width: 1199px) {
+      margin-right: 0;
+    }
   }
 
   &__item input::placeholder {
@@ -20,6 +40,11 @@
   }
 
   &__label {
+    @media screen and (max-width: 1199px) {
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
     color: $primary-white-color;
     font-size: 14px;
     font-weight: 700;
@@ -30,6 +55,11 @@
   }
 
   &__input {
+    @media screen and (max-width: 1199px) {
+      width: 450px;
+      margin-bottom: 20px;
+    }
+
     color: $primary-white-color;
 
     width: 358px;
