--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -2,6 +2,10 @@
   padding: 94px 0;
   background-color: $primary-white-color;
 
+  @media screen and (max-width: 1199px) {
+    padding: 60px 0;
+  }
+
   &__container {
     @extend %container;
   }
@@ -11,20 +15,33 @@
   }
 
   &__list {
+    @media screen and (max-width: 1199px) {
+      flex-wrap: wrap;
+    }
+
     @extend %list;
     display: flex;
     justify-content: center;
   }
 
   &__link {
+    @media screen and (max-width: 1199px) {
+      width: 210px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 170px;
+    }
+
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 170px;
     height: 90px;
     border: 1px solid $soc-icons-color;
     border-radius: 4px;
     color: $soc-icons-color;
+
+    margin: 0;
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
       background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -37,8 +54,31 @@
   }
 
   &__item {
-    &:not(:last-child) {
-      margin-right: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+
+    @media screen and (max-width: 767px) {
+      &:nth-last-child(-n + 2) {
+        margin-bottom: 0px;
+      }
+      &:nth-child(2n) {
+        margin-right: 0px;
+      }
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      &:nth-last-child(-n + 3) {
+        margin-bottom: 0px;
+      }
+      &:nth-child(3n) {
+        margin-right: 0px;
+      }
+    }
+
+    @media screen and (min-width: 1200px) {
+      &:last-child {
+        margin-right: 0px;
+      }
     }
   }
 
