--- a/css/main.css
+++ b/css/main.css
@@ -6,22 +6,23 @@
 }
 
 .client__container, .team__container, .section__container, .benefits__container, .hero__container, .footer .container, .header__container {
+  width: 100%;
   padding: 0 15px;
   margin: 0 auto;
 }
 @media screen and (min-width: 480px) {
   .client__container, .team__container, .section__container, .benefits__container, .hero__container, .footer .container, .header__container {
-    width: 480px;
+    max-width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
   .client__container, .team__container, .section__container, .benefits__container, .hero__container, .footer .container, .header__container {
-    width: 768px;
+    max-width: 768px;
   }
 }
 @media screen and (min-width: 1200px) {
   .client__container, .team__container, .section__container, .benefits__container, .hero__container, .footer .container, .header__container {
-    width: 1200px;
+    max-width: 1200px;
   }
 }
 
@@ -341,7 +342,7 @@ img {
     margin-bottom: 30px;
   }
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer .container {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -659,9 +660,10 @@ img {
 }
 .subscribe__input {
   color: #ffffff;
-  width: 358px;
+  margin-bottom: 20px;
+  min-width: 320px;
   height: 50px;
-  padding: 15px 16px;
+  padding-left: 16px;
   outline: 0;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -669,10 +671,14 @@ img {
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 1200px) {
   .subscribe__input {
-    width: 450px;
-    margin-bottom: 20px;
+    min-width: 358px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .subscribe__input {
+    min-width: 450px;
   }
 }
 .subscribe__button {
@@ -1205,75 +1211,49 @@ img {
   }
 }
 .client__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 30px;
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .client__list {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    grid-template-columns: auto auto;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .client__list {
+    grid-template-columns: auto auto auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .client__list {
+    grid-template-columns: auto auto auto auto auto auto;
   }
 }
 .client__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
+  height: 100%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 90px;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
   color: #afb1b8;
-  margin: 0;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-@media screen and (max-width: 1199px) {
-  .client__link {
-    width: 210px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .client__link {
-    width: 170px;
-  }
 }
 .client__link:hover, .client__link:focus {
   border-color: #2196f3;
   color: #2196f3;
 }
 .client__item {
-  margin-right: 30px;
-  margin-bottom: 30px;
-}
-@media screen and (max-width: 767px) {
-  .client__item:nth-last-child(-n+2) {
-    margin-bottom: 0px;
-  }
-  .client__item:nth-child(2n) {
-    margin-right: 0px;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .client__item:nth-last-child(-n+3) {
-    margin-bottom: 0px;
-  }
-  .client__item:nth-child(3n) {
-    margin-right: 0px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .client__item:last-child {
-    margin-right: 0px;
-  }
+  height: 92px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
 }
 .client__icon {
   fill: currentColor;
