--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -6,22 +6,23 @@
 }
 
 .portfolio__container, .footer .container, .header__container {
+  width: 100%;
   padding: 0 15px;
   margin: 0 auto;
 }
 @media screen and (min-width: 480px) {
   .portfolio__container, .footer .container, .header__container {
-    width: 480px;
+    max-width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
   .portfolio__container, .footer .container, .header__container {
-    width: 768px;
+    max-width: 768px;
   }
 }
 @media screen and (min-width: 1200px) {
   .portfolio__container, .footer .container, .header__container {
-    width: 1200px;
+    max-width: 1200px;
   }
 }
 
@@ -321,7 +322,7 @@ img {
     margin-bottom: 30px;
   }
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer .container {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -639,9 +640,10 @@ img {
 }
 .subscribe__input {
   color: #ffffff;
-  width: 358px;
+  margin-bottom: 20px;
+  min-width: 320px;
   height: 50px;
-  padding: 15px 16px;
+  padding-left: 16px;
   outline: 0;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -649,10 +651,14 @@ img {
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 1200px) {
   .subscribe__input {
-    width: 450px;
-    margin-bottom: 20px;
+    min-width: 358px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .subscribe__input {
+    min-width: 450px;
   }
 }
 .subscribe__button {
