--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -15,33 +15,32 @@
   }
 
   &__list {
-    @media screen and (max-width: 1199px) {
-      flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 30px;
+
+    @media screen and (min-width: 480px) and (max-width: 767px) {
+      grid-template-columns: auto auto;
     }
 
-    @extend %list;
-    display: flex;
-    justify-content: center;
-  }
-
-  &__link {
-    @media screen and (max-width: 1199px) {
-      width: 210px;
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      grid-template-columns: auto auto auto;
     }
 
     @media screen and (min-width: 1200px) {
-      width: 170px;
+      grid-template-columns: auto auto auto auto auto auto;
     }
 
+    @extend %list;
+  }
+
+  &__link {
     display: flex;
+    width: 100%;
+    height: 100%;
     justify-content: center;
     align-items: center;
-    height: 90px;
-    border: 1px solid $soc-icons-color;
-    border-radius: 4px;
     color: $soc-icons-color;
-
-    margin: 0;
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
       background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -54,32 +53,9 @@
   }
 
   &__item {
-    margin-right: 30px;
-    margin-bottom: 30px;
-
-    @media screen and (max-width: 767px) {
-      &:nth-last-child(-n + 2) {
-        margin-bottom: 0px;
-      }
-      &:nth-child(2n) {
-        margin-right: 0px;
-      }
-    }
-
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
-      &:nth-last-child(-n + 3) {
-        margin-bottom: 0px;
-      }
-      &:nth-child(3n) {
-        margin-right: 0px;
-      }
-    }
-
-    @media screen and (min-width: 1200px) {
-      &:last-child {
-        margin-right: 0px;
-      }
-    }
+    height: 92px;
+    border: 1px solid $soc-icons-color;
+    border-radius: 4px;
   }
 
   &__icon {
