--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -13,7 +13,7 @@
       }
     }
 
-    @media screen and (max-width: 1199px) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
       flex-wrap: wrap;
       justify-content: center;
     }
