--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -55,17 +55,22 @@
   }
 
   &__input {
-    @media screen and (max-width: 1199px) {
-      width: 450px;
-      margin-bottom: 20px;
+    @media screen and (min-width: 1200px) {
+      min-width: 358px;
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      min-width: 450px;
     }
 
     color: $primary-white-color;
 
-    width: 358px;
+    margin-bottom: 20px;
+
+    min-width: 320px;
     height: 50px;
 
-    padding: 15px 16px;
+    padding-left: 16px;
 
     outline: 0;
 
