--- a/css/main.css
+++ b/css/main.css
@@ -1303,8 +1303,10 @@ img {
       -ms-flex-align: center;
           align-items: center;
   color: #afb1b8;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client__link:hover, .client__link:focus {
   border-color: #2196f3;
@@ -1312,8 +1314,6 @@ img {
 }
 .client__item {
   height: 92px;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
 }
 .client__icon {
   fill: currentColor;
