--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -40,8 +40,11 @@
     align-items: center;
     color: $soc-icons-color;
 
+    border: 1px solid $soc-icons-color;
+    border-radius: 4px;
+
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
@@ -52,8 +55,6 @@
 
   &__item {
     height: 92px;
-    border: 1px solid $soc-icons-color;
-    border-radius: 4px;
   }
 
   &__icon {
