--- a/css/main.css
+++ b/css/main.css
@@ -401,7 +401,16 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-left: 93px;
+}
+@media screen and (min-width: 1200px) {
+  .nav__list {
+    margin-left: 93px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .nav__list {
+    margin-left: 88px;
+  }
 }
 .nav__item:not(:last-child) {
   margin-right: 50px;
@@ -446,10 +455,17 @@ img {
   margin-left: auto;
 }
 .con__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   margin-left: auto;
+}
+@media screen and (min-width: 1199px) {
+  .con__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 .con__link {
   display: -webkit-box;
@@ -464,9 +480,13 @@ img {
   line-height: 1.1;
   letter-spacing: 0.02em;
   text-decoration: none;
-  padding: 32px 0;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 1199px) {
+  .con__link {
+    padding: 32px 0;
+  }
 }
 .con__link:hover, .con__link:focus {
   color: #2196f3;
@@ -479,8 +499,15 @@ img {
       -ms-flex-align: center;
           align-items: center;
 }
-.con__item:not(:last-child) {
-  margin-right: 50px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .con__item:not(:last-child) {
+    padding-bottom: 10px;
+  }
+}
+@media screen and (min-width: 1199px) {
+  .con__item:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 .con__icon {
   fill: currentColor;
