--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -26,6 +26,18 @@
   }
 }
 
+@media screen and (max-width: 1199px) {
+  .portfolio {
+    padding: 60px 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio {
+    padding: 94px 0;
+  }
+}
+
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 /*
 Document
@@ -364,7 +376,16 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-left: 93px;
+}
+@media screen and (min-width: 1200px) {
+  .nav__list {
+    margin-left: 93px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .nav__list {
+    margin-left: 88px;
+  }
 }
 .nav__item:not(:last-child) {
   margin-right: 50px;
@@ -409,10 +430,17 @@ img {
   margin-left: auto;
 }
 .con__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   margin-left: auto;
+}
+@media screen and (min-width: 1199px) {
+  .con__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 .con__link {
   display: -webkit-box;
@@ -427,9 +455,13 @@ img {
   line-height: 1.1;
   letter-spacing: 0.02em;
   text-decoration: none;
-  padding: 32px 0;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 1199px) {
+  .con__link {
+    padding: 32px 0;
+  }
 }
 .con__link:hover, .con__link:focus {
   color: #2196f3;
@@ -442,8 +474,15 @@ img {
       -ms-flex-align: center;
           align-items: center;
 }
-.con__item:not(:last-child) {
-  margin-right: 50px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .con__item:not(:last-child) {
+    padding-bottom: 10px;
+  }
+}
+@media screen and (min-width: 1199px) {
+  .con__item:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 .con__icon {
   fill: currentColor;
@@ -692,13 +731,33 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   padding-bottom: 50px;
+}
+@media screen and (max-width: 767px) {
+  .filter__list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 768px) {
+  .filter__list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 .filter__item:not(:last-child) {
   margin-right: 8px;
+}
+@media screen and (max-width: 767px) {
+  .filter__item:nth-child(2n+3) {
+    margin-right: 0;
+  }
+}
+@media screen and (max-width: 767px) {
+  .filter__item:nth-child(-n+3) {
+    margin-bottom: 15px;
+  }
 }
 .filter__button {
   color: #000000;
@@ -728,35 +787,49 @@ img {
 
 .portfolio {
   background-color: #ffffff;
-  padding-top: 94px;
-  padding-bottom: 94px;
 }
 .portfolio__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  display: grid;
+  grid-template-rows: auto;
+  gap: 30px;
+}
+@media screen and (min-width: 768px) {
+  .portfolio__list {
+    grid-template-rows: none;
+    grid-template-columns: auto auto;
+  }
+}
+@media screen and (min-width: 1199px) {
+  .portfolio__list {
+    grid-template-rows: none;
+    grid-template-columns: auto auto auto;
+  }
 }
 .portfolio__item {
-  width: calc((100% - 60px) / 3);
-  background-color: var(--primary-white-color);
-  margin-right: 30px;
-  margin-bottom: 30px;
+  background-color: #ffffff;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .portfolio__item {
+    min-width: 450px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .portfolio__item {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio__item {
+    width: 370px;
+  }
+}
 .portfolio__item:hover {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-.portfolio__item:nth-last-child(-n+3) {
-  margin-bottom: 0px;
-}
-.portfolio__item:nth-child(3n) {
-  margin-right: 0px;
 }
 .portfolio__item:hover > .portfolio__link > .portfolio__link_thumb > .portfolio__link_overlay-content {
   -webkit-transform: translateY(0%);
