--- a/sass/components/_header-con.scss
+++ b/sass/components/_header-con.scss
@@ -4,11 +4,19 @@
 
   &__list {
     @extend %list;
-    display: flex;
     margin-left: auto;
+
+    @media screen and (min-width: 1199px) {
+      display: flex;
+      align-items: center;
+    }
   }
 
   &__link {
+    @media screen and (min-width: 1199px) {
+      padding: 32px 0;
+    }
+
     display: flex;
     align-items: center;
     color: $primary-text-color;
@@ -17,7 +25,6 @@
     line-height: 1.1;
     letter-spacing: 0.02em;
     text-decoration: none;
-    padding: 32px 0;
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -31,8 +38,16 @@
     display: flex;
     align-items: center;
 
-    &:not(:last-child) {
-      margin-right: 50px;
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      &:not(:last-child) {
+        padding-bottom: 10px;
+      }
+    }
+
+    @media screen and (min-width: 1199px) {
+      &:not(:last-child) {
+        margin-right: 50px;
+      }
     }
   }
 
