--- a/sass/components/_header-nav.scss
+++ b/sass/components/_header-nav.scss
@@ -2,7 +2,14 @@
   &__list {
     @extend %list;
     display: flex;
-    margin-left: 93px;
+
+    @media screen and (min-width: 1200px) {
+      margin-left: 93px;
+    }
+
+    @media screen and (min-width: 768px) {
+      margin-left: 88px;
+    }
   }
 
   &__item:not(:last-child) {
