--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,7 +1,8 @@
 .portfolio {
   background-color: $primary-white-color;
-  padding-top: 94px;
-  padding-bottom: 94px;
+
+  @extend %mobile-tablet_padding;
+  @extend %desktop_padding;
 
   &__container {
     @extend %container;
@@ -9,29 +10,41 @@
 
   &__list {
     @extend %list;
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-rows: auto;
+    gap: 30px;
+
+    @media screen and (min-width: 768px) {
+      grid-template-rows: none;
+      grid-template-columns: auto auto;
+    }
+
+    @media screen and (min-width: 1199px) {
+      grid-template-rows: none;
+      grid-template-columns: auto auto auto;
+    }
   }
 
   &__item {
-    width: calc((100% - 60px) / 3);
-    background-color: var(--primary-white-color);
-    margin-right: 30px;
-    margin-bottom: 30px;
+    @media screen and (min-width: 480px) and (max-width: 767px) {
+      min-width: 450px;
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      width: 354px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 370px;
+    }
+
+    background-color: $primary-white-color;
 
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover {
       box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
         0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-    }
-
-    &:nth-last-child(-n + 3) {
-      margin-bottom: 0px;
-    }
-
-    &:nth-child(3n) {
-      margin-right: 0px;
     }
   }
 
