--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -82,7 +82,9 @@
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    z-index: -1;
+    @media screen and (min-width: 768px) {
+      z-index: -1;
+    }
   }
 
   &__area:hover ~ &__icon,
@@ -149,12 +151,17 @@
   }
 
   &__terms {
+    @media screen and (min-width: 768px) {
+      font-size: 14px;
+      line-height: 1.7;
+    }
+
     display: flex;
     align-items: center;
 
     color: $primary-text-color;
-    font-size: 14px;
-    line-height: 1.7;
+    font-size: 12px;
+    line-height: 1.2;
     letter-spacing: 0.03em;
   }
 
