--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import "./components/header";
 @import "./components/footer";
 @import "./components/logo";
+@import "./components/menu";
 @import "./components/header-nav";
 @import "./components/header-con";
 @import "./components/address";
