--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,10 @@ body {
   font-family: "Roboto", system-ui, -apple-system, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji"; /* 2 */
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 /*
 Grouping content
 ================
@@ -338,6 +342,15 @@ img {
       -ms-flex-align: center;
           align-items: center;
 }
+@media screen and (max-width: 767px) {
+  .header__container {
+    position: relative;
+    padding: 16px 15px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
 
 .footer {
   background-color: #2f303a;
@@ -397,6 +410,53 @@ img {
   color: #2196f3;
 }
 
+@media screen and (min-width: 768px) {
+  .menu {
+    display: none;
+  }
+}
+.menu__button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background: transparent;
+}
+.menu__icon:hover > .menu__icon-burger, .menu__icon:hover > .menu__icon-cross {
+  color: #2196f3;
+}
+.menu__icon-burger, .menu__icon-cross {
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: currentColor;
+}
+.menu__button .menu__icon-cross, .menu__button.is-open .menu__icon-burger {
+  display: none;
+}
+.menu__button.is-open .menu__icon-cross {
+  display: block;
+}
+.menu__container {
+  display: none;
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 796px;
+  top: 100%;
+  left: 0;
+  background-color: #ffffff;
+}
+.menu__container.is-open {
+  display: block;
+}
+
+@media screen and (max-width: 767px) {
+  .nav {
+    display: none;
+  }
+}
 .nav__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -453,6 +513,11 @@ img {
   display: -ms-flexbox;
   display: flex;
   margin-left: auto;
+}
+@media screen and (max-width: 767px) {
+  .con {
+    display: none;
+  }
 }
 .con__list {
   margin-left: auto;
@@ -758,9 +823,15 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 94px 15px;
   background-color: rgba(0, 0, 0, 0.2);
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 767px) {
+  .backdrop {
+    overflow-y: scroll;
+  }
 }
 .backdrop__hidden {
   opacity: 0;
@@ -772,22 +843,29 @@ img {
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%) translateY(0);
-          transform: translate(-50%, -50%) translateY(0);
-  min-height: 581px;
-  min-width: 528px;
+  position: relative;
+  width: 100%;
+  max-width: 450px;
   text-align: center;
   background-color: #ffffff;
   border-radius: 4px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%) translateY(0);
+            transform: translate(-50%, -50%) translateY(0);
+    min-height: 581px;
+    min-width: 528px;
+    -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 .modal__cross {
   fill: currentColor;
@@ -915,7 +993,11 @@ img {
   fill: currentColor;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  z-index: -1;
+}
+@media screen and (min-width: 768px) {
+  .modal-form__icon {
+    z-index: -1;
+  }
 }
 .modal-form__area:hover ~ .modal-form__icon, .modal-form__area:focus ~ .modal-form__icon {
   color: #2196f3;
@@ -972,9 +1054,15 @@ img {
       -ms-flex-align: center;
           align-items: center;
   color: #757575;
-  font-size: 14px;
-  line-height: 1.7;
+  font-size: 12px;
+  line-height: 1.2;
   letter-spacing: 0.03em;
+}
+@media screen and (min-width: 768px) {
+  .modal-form__terms {
+    font-size: 14px;
+    line-height: 1.7;
+  }
 }
 .modal-form__link {
   color: #2196f3;
@@ -1025,15 +1113,25 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding: 118px 0;
   max-width: 1600px;
   margin: 0 auto;
-  padding: 200px 0;
   background-color: #c4c4c4;
   background-image: url(../images/teamwork.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
+}
+@media screen and (max-width: 767px) {
+  .hero {
+    height: 400px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    padding: 200px 0;
+  }
 }
 .hero__container {
   position: relative;
@@ -1053,11 +1151,18 @@ img {
 .hero__title {
   color: #ffffff;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.4;
+  font-size: 26px;
+  line-height: 1.6;
   text-transform: uppercase;
-  width: 696px;
+  width: 360px;
   margin: 0 auto;
+}
+@media screen and (min-width: 768px) {
+  .hero__title {
+    font-size: 44px;
+    line-height: 1.4;
+    width: 696px;
+  }
 }
 .hero__button {
   color: #ffffff;
@@ -1190,6 +1295,7 @@ img {
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 .team__card img {
+  max-width: 450px;
   height: 460px;
 }
 @media screen and (min-width: 768px) {
