--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -1,9 +1,18 @@
 .backdrop {
+  @media screen and (max-width: 767px) {
+    overflow-y: scroll;
+  }
+
   position: fixed;
+
   top: 0;
   left: 0;
+
   width: 100%;
   height: 100%;
+
+  padding: 94px 15px;
+
   background-color: $backdrop-color;
 
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
