--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,11 +1,22 @@
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) translateY(0);
+  @media screen and (min-width: 768px) {
+    position: absolute;
 
-  min-height: 581px;
-  min-width: 528px;
+    top: 50%;
+    left: 50%;
+
+    transform: translate(-50%, -50%) translateY(0);
+
+    min-height: 581px;
+    min-width: 528px;
+
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  position: relative;
+
+  width: 100%;
+  max-width: 450px;
 
   text-align: center;
 
@@ -13,8 +24,6 @@
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &__cross {
     fill: currentColor;
