Добавлено мобильное меню на страницу Портфолио

--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -12,3 +12,4 @@
 @import "./components/subscribe";
 @import "./components/filter";
 @import "./components/portfolio";
+@import "./components/menu";
