--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -48,7 +48,7 @@
       font-size: 44px;
       line-height: 1.4;
 
-      width: 696px;
+      max-width: 696px;
     }
     color: $primary-white-color;
     font-weight: 900;
