--- a/css/main.css
+++ b/css/main.css
@@ -324,6 +324,8 @@ p {
 
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .header {
@@ -516,6 +518,8 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 .mobile-menu__soc .mobile-menu__item:not(:last-child) {
   margin-right: 20px;
@@ -1234,7 +1238,7 @@ img {
   .hero__title {
     font-size: 44px;
     line-height: 1.4;
-    width: 696px;
+    max-width: 696px;
   }
 }
 .hero__button {
@@ -1365,12 +1369,6 @@ img {
   border-radius: 0 0 4px 4px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-}
-@media screen and (min-width: 1200px) {
-  .team__card img {
-    width: 270px;
-    height: 260px;
-  }
 }
 .team__text {
   color: #757575;
