--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,8 @@ body {
   font-family: "Roboto", system-ui, -apple-system, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji"; /* 2 */
 }
 
-body.modal-open {
+body.modal-open,
+body.is-open {
   overflow: hidden;
 }
 
@@ -426,7 +427,7 @@ img {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  z-index: 3;
+  z-index: 999;
 }
 @media screen and (min-width: 768px) {
   .menu__container {
@@ -1092,8 +1093,8 @@ img {
 .modal-form__checkbox-icon {
   position: relative;
   display: inline-block;
-  width: 16px;
-  height: 16px;
+  min-width: 16px;
+  min-height: 16px;
   border: 2px solid #212121;
   border-radius: 2px;
   margin-right: 7px;
@@ -1135,7 +1136,7 @@ img {
   line-height: 1.2;
   letter-spacing: 0.03em;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .modal-form__terms {
     font-size: 14px;
     line-height: 1.7;
