--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -81,7 +81,8 @@ body {
   font-family: "Roboto", system-ui, -apple-system, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji"; /* 2 */
 }
 
-body.modal-open {
+body.modal-open,
+body.is-open {
   overflow: hidden;
 }
 
@@ -937,7 +938,7 @@ img {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  z-index: 3;
+  z-index: 999;
 }
 @media screen and (min-width: 768px) {
   .menu__container {
